After updating to rap Juno M7 selection and hover background of table were not visible anymore. Fixed by explicitly declaring the RowOverlay although this should not be necessary and should be handled by rap automatically, which obviously isn't.

--- a/org.eclipse.scout.rt.ui.rap/theme/scout.css
+++ b/org.eclipse.scout.rt.ui.rap/theme/scout.css
@@ -1337,6 +1337,14 @@ Table[BORDER] {
   border: none;
 }
 
+/* Shouldn't actually be necessary because it's already declared in table.default.css of org.eclipse.rap.rwt.
+   But without explicitly setting it the background color is set to white which overrides selection and hover state. */
+Table-RowOverlay {
+  background-color: transparent;
+  color: inherit;
+  background-image: none;
+}
+
 Composite.tableField {
   background-color: white;
   background-image: none;
@@ -1647,6 +1655,14 @@ Tree:disabled {
 
 Tree[BORDER] {
   border: none;
+}
+
+/* Shouldn't actually be necessary because it's already declared in tree.default.css of org.eclipse.rap.rwt.
+   But without explicitly setting it the background color is set to white which overrides selection and hover state. */
+Tree-RowOverlay {
+  background-color: transparent;
+  color: inherit;
+  background-image: none;
 }
 
 Composite.treeField {
